Fix greeting dialog on small displays

--- a/src/scss/_greeting.scss
+++ b/src/scss/_greeting.scss
@@ -15,9 +15,8 @@ $rounding: 15px;
 	overflow-y: hidden;
 
 	#greeting {
-		width: 85%;
-		height: 85%;
-		border-radius: $rounding;
+		width: 100%;
+		height: 100%;
 		background-color: #ffffff;
 		box-shadow: 0 0 5px #000000;
 		text-align: center;
@@ -26,7 +25,6 @@ $rounding: 15px;
 		#greeting-image {
 			width: 100%;
 			height: 35%;
-			border-radius: $rounding $rounding 0 0;
 			background: url("gfx/bikes.jpg") 50% 50% / cover no-repeat;
 		}
 
@@ -61,13 +59,23 @@ $rounding: 15px;
 		}
 	}
 
-	@media (min-width: 550px) {
+	@media (min-width: 350px) {
 		#greeting {
-			width: 400px;
 			height: auto;
 
 			#greeting-image {
 				height: 250px;
+			}
+		}
+	}
+
+	@media (min-width: 550px) {
+		#greeting {
+			width: 400px;
+			border-radius: $rounding;
+
+			#greeting-image {
+				border-radius: $rounding $rounding 0 0;
 			}
 		}
 	}
